- Move `trace.transaction_id` to `transaction.id` {pull}345[345], {pull}347[347], {pull}371[371]
- Renaming `trace` to `span` {pull}352[352].
- Renaming and reverse boolean `exception.uncaught` to `exception.handled` {pull}434[434].
- Move process related fields to their own namespace {pull}445[445].

==== Bug fixes
- Updated systemd doc url {pull}354[354]

==== Added
- Include build time and revision in version information {pull}396[396]
- service.environment {pull}366[366]
- Consider exception or log message for grouping key when nothing else is available {pull}435[435]
- Add context.request.url.full {pull}436[436]
- Report more detail on max data size error {pull}442[442]
- Increase default 'MaxUnzippedSize' from 10mb to 50mb {pull}439[439]
- Add transaction.id to errors {pull}437[437]
- Support for `transaction.marks` {pull}430[430]
- Support for uploading sourcemaps {pull}302[302].
- Support for sourcemap mapping on incoming frontend requests {pull}381[381]
- Support for `transaction.marks` {pull}430[430].
- Support for `transaction.span_count.dropped.total` {pull}448[448].
- Optional field `transaction.sampled` {pull}441[441]

==== Deprecated

==== Known Issues



=== APM Server version 6.1
https://github.com/elastic/apm-server/compare/f9a2086ceed0b918e1a0b3d8ddc140fc21af0e74\...421db9d1e10935e7b9aec00b64cf66ad2d50d797[View commits]

==== Breaking changes
- Allow ES template index prefix to be `apm` {pull}152[152].
- Remove `git_ref` from Intake API and Elasticsearch output {pull}158[158].
- Switch to Go 1.9.2

==== Bug fixes
- Fix dashboard loading for Kibana 5x {pull}221[221].
- Fix command for loading dashboards in docs {pull}205[205].
- Log a warning message if secret token is set but ssl is not {pull}204[204].
- Fix wrong content-type in response {pull}171[171].
- Remove duplicate dashboard entries {pull}162[162].
- Remove `context.db` from `fields.yml` for consistency, has not been indexed before {pull}159[159].
- Updated systemd doc url {pull}354[354]